# discord-flow

./: Pipfile  README.md  main.py  opt  pyproject.toml  regenerate_protobufs.sh  tox.ini
discordflow/: __main__.py  cities.py  google.py  main.py  utils.py  yandex.py  youtubedl.py
discordflow/skills/: __init__.py  aidungeon.py  aidungeon.py.disabled  akinator.py  cities.py  duckduckgo.py  googlesearch.py  parlai.py  youtubedl.py
google/api/: client_pb2.py  field_behavior_pb2.py  resource_pb2.py
google/cloud/dialogflow/v2/: audio_config_pb2.py  context_pb2.py  entity_type_pb2.py  environment_grpc.py  environment_pb2.py  intent_pb2.py  session_entity_type_pb2.py  session_grpc.py  session_pb2.py  validation_result_pb2.py  webhook_pb2.py
google/cloud/speech/v1/: cloud_speech_grpc.py  cloud_speech_pb2.py
google/cloud/texttospeech/v1/: cloud_tts_grpc.py  cloud_tts_pb2.py
google/cloud/translate/v3/: translation_service_grpc.py  translation_service_pb2.py
google/longrunning/: operations_pb2.py
google/protobuf/: duration_grpc.py
google/rpc/: status_pb2.py
google/type/: latlng_pb2.py
skill-states/: cities.antheso#4533.pickle  cities.nikicat#7213.pickle
yandex/cloud/ai/stt/v2/: stt_service_grpc.py
yandex/cloud/api/: operation_grpc.py
yandex/cloud/operation/: operation_grpc.py
